Fix items alignment in the mobile nav

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -125,8 +125,8 @@ img {
   border-radius: 10rem;
   outline: none;
   position: relative;
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .btn:hover {
@@ -141,7 +141,7 @@ img {
 }
 
 .btn::after {
-  content: '';
+  content: "";
   display: inline-block;
   width: 100%;
   height: 100%;
@@ -150,8 +150,8 @@ img {
   top: 0;
   left: 0;
   z-index: -1;
-  -webkit-transition: all .4s;
-  transition: all .4s;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
 }
 
 .btn--primary {
@@ -173,11 +173,12 @@ img {
 }
 
 .btn__flex svg {
-  margin-left: .5rem;
+  margin-left: 0.5rem;
   fill: var(--color-5);
 }
 
-h1, h2 {
+h1,
+h2 {
   color: var(--color-2);
   line-height: var(--line-height-M);
   font-family: var(--ff-semibold);
@@ -190,7 +191,7 @@ h1 {
 }
 
 h1::before {
-  content: '';
+  content: "";
   position: absolute;
   top: -2rem;
   left: 0;
@@ -207,7 +208,7 @@ h2 {
 }
 
 .heading::before {
-  content: '';
+  content: "";
   position: absolute;
   top: -2rem;
   left: 0;
@@ -261,12 +262,12 @@ h4 {
 .nav__link {
   font-family: var(--ff-semibold);
   color: inherit;
-  font-size: 1.5rem;
+  font-size: 1.55rem;
   position: relative;
 }
 
 .nav__link::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: -1rem;
   left: 50%;
@@ -277,8 +278,8 @@ h4 {
   background-color: var(--color-1);
   border-radius: 50%;
   opacity: 0;
-  -webkit-transition: all .3s;
-  transition: all .3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .nav__link:hover::after {
@@ -321,10 +322,10 @@ h4 {
   -webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
   position: relative;
-  -webkit-transition: -webkit-transform .3s;
-  transition: -webkit-transform .3s;
-  transition: transform .3s;
-  transition: transform .3s, -webkit-transform .3s;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
 }
 
 .signature__item:hover {
@@ -398,8 +399,8 @@ h4 {
   border-top-right-radius: 5rem;
   height: 48rem;
   position: relative;
-  -webkit-box-shadow: 0 .2rem .6rem #e4e4e4;
-          box-shadow: 0 .2rem .6rem #e4e4e4;
+  -webkit-box-shadow: 0 0.2rem 0.6rem #e4e4e4;
+          box-shadow: 0 0.2rem 0.6rem #e4e4e4;
 }
 
 .menu__image img {
@@ -496,7 +497,7 @@ h4 {
 }
 
 .app__content h2::before {
-  content: '';
+  content: "";
   position: absolute;
   top: -2rem;
   left: 0;
@@ -535,7 +536,7 @@ h4 {
   width: 13.5rem;
   height: 13.5rem;
   margin: 0 auto 3rem;
-  padding: .5rem;
+  padding: 0.5rem;
   border: 1px solid var(--color-3);
   border-radius: 100%;
 }
@@ -707,27 +708,30 @@ h4 {
     top: 0;
     left: 0;
     width: 100%;
-    height: 45vh;
-    padding: 8rem 4rem 2rem 4rem;
+    height: 40vh;
+    padding: 6rem 4rem 2rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
     -webkit-transform: translateY(-45vh);
             transform: translateY(-45vh);
-    -webkit-transition: -webkit-transform .5s;
-    transition: -webkit-transform .5s;
-    transition: transform .5s;
-    transition: transform .5s, -webkit-transform .5s;
+    -webkit-transition: -webkit-transform 0.5s;
+    transition: -webkit-transform 0.5s;
+    transition: transform 0.5s;
+    transition: transform 0.5s, -webkit-transform 0.5s;
   }
   .nav__item:not(:last-child) {
-    margin-bottom: 3rem;
+    margin-bottom: 3.5rem;
   }
   .nav__item:not(:last-child) {
     margin-right: 0;
